DB모델링 추가 및 변경

--- a/YeolsimComms/src/com/yeolsim/resources/actionmapping.properties
+++ b/YeolsimComms/src/com/yeolsim/resources/actionmapping.properties
@@ -15,9 +15,10 @@
 /updateProduct.do=com.yeolsim.view.product.UpdateProductAction
 /delteProduct.do=com.yeolsim.view.product.DelProductAction
 
+/addBuket.do=com.yeolsim.view.buket.AddBuketAction
+/addBuketList.do=com.yeolsim.view.buket.AddBuketListAction
 
 /addBuy.do=com.yeolsim.view.buy.AddBuyAction
-/addPurchaseView.do=com.model2.mvc.view.purchase.AddPurchaseViewAction
 /getBuy.do=com.yeolsim.view.buy.GetBuyAction
 /updatePurchaseView.do=com.model2.mvc.view.purchase.UpdatePurchaseViewAction
 /updatePurchase.do=com.model2.mvc.view.purchase.UpdatePurchaseAction
