--- a/YeolsimComms/src/com/yeolsim/resources/actionmapping.properties
+++ b/YeolsimComms/src/com/yeolsim/resources/actionmapping.properties
@@ -7,7 +7,6 @@
 /UpdateMember.do=com.yeolsim.view.member.UpdateMemberAction
 /listUser.do=com.yeolsim.view.user.ListUserAction
 
-
 /addProduct.do=com.yeolsim.view.product.AddProductAction
 /getProduct.do=com.yeolsim.view.product.GetProductAction
 /listProduct.do=com.yeolsim.view.product.ListProductAction
@@ -16,15 +15,13 @@
 /delteProduct.do=com.yeolsim.view.product.DelProductAction
 
 /addBuket.do=com.yeolsim.view.buket.AddBuketAction
+/addBuketBuy.do=com.yeolsim.view.buket.AddBuketBuyAction
 /addBuketList.do=com.yeolsim.view.buket.AddBuketListAction
 
 /addBuy.do=com.yeolsim.view.buy.AddBuyAction
 /getBuy.do=com.yeolsim.view.buy.GetBuyAction
-/updatePurchaseView.do=com.model2.mvc.view.purchase.UpdatePurchaseViewAction
-/updatePurchase.do=com.model2.mvc.view.purchase.UpdatePurchaseAction
 /listBuy.do=com.yeolsim.view.buy.ListBuyAction
+/listGetBuy.do=com.yeolsim.view.buy.ListGetBuyAction
 /delBuy.do=com.yeolsim.view.buy.DelBuyAction
-/listSale.do=com.model2.mvc.view.purchase.ListSaleAction
-/updateTranCode.do=com.model2.mvc.view.purchase.UpdateTranCodeAction
-/updateTranCodeByProd.do=com.model2.mvc.view.purchase.UpdateTranCodeByProdAction
+
 
